--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,12 @@ ENV/
 
 # Visual Studio Code
 .vscode
+
+# Compiled python modules.
+*.pyc
+
+# Setuptools distribution folder.
+/dist/
+
+# Python egg metadata, regenerated from source files by setuptools.
+/*.egg-info
